make javascript references work

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>YA 2048</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="js/game.js"></script>
-  <script src="js/main.js"></script>
+  <title>2048 game</title>
+  <link type="text/css" rel="stylesheet" href="css/style.css">
+  <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script type="text/javascript" src="js/game.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
-  <h1>YA 2048</h1>
+  <h1>2048 game</h1>
   <div class="board">
     <div class="cell r0 c0"><div></div></div>
     <div class="cell r0 c1"><div></div></div>
